# go-server/swagger.yml
@@ -11,52 +11,53 @@ schemes:
   - http
 basePath: /api
 securityDefinitions:
-  OauthSecurity:
-    type: oauth2
-    flow: accessCode
-    authorizationUrl: 'https://accounts.google.com/o/oauth2/v2/auth'
-    tokenUrl: 'https://www.googleapis.com/oauth2/v4/token'
-    scopes:
-      admin: Admin scope
-      user: User scope
+  APIKeyHeader:
+    type: apiKey
+    in: header
+    name: JWT-Token
 security:
-  - OauthSecurity:
-    - user
+  - APIKeyHeader: []
 paths:
   /v0/login:
-    get:
+    post:
+      parameters:
+        - name: LoginForm
+          in: body
+          schema:
+            $ref: "#/definitions/LoginForm"
       operationId: login
       tags:
         - login
-      summary: Login by using Google client OAuth 2.0.
+      summary: Login by using username and password
       security: []
       responses:
-        '200':
+        200:
           description: Login successful.
           schema:
-            properties:
-              access_token:
-                type: string
-                format: string
+            $ref: "#/definitions/UserToken"
         default:
-          description: error
+          description: Internal server error
           schema:
-            $ref: "#/definitions/Error"
-  /v0/auth/callback:
-    get:
-      operationId: callback
-      summary: Return access_token and user
+              $ref: "#/definitions/Error"
+  /v0/registration:
+    post:
+      parameters:
+        - name: RegistrationForm
+          in: body
+          schema:
+            $ref: "#/definitions/RegistrationForm"
+      tags:
+        - registration
+      operationId: registration
+      summary: Registration by using email, username, password
       security: []
       responses:
-        '200':
-          description: login
-          schema:
-            $ref: '#/definitions/UserToken'
+        200:
+          description: Registration successful
         default:
-          description: error
+          description: Internal server error
           schema:
             $ref: "#/definitions/Error"
-
 
   /v0/cards:
     get:
@@ -71,8 +72,10 @@ paths:
             type: array
             items:
               $ref: "#/definitions/Card"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         default:
-          description: generic Error response
+          description: Internal server error
           schema:
             $ref: "#/definitions/Error"
     post:
@@ -90,8 +93,10 @@ paths:
           description: Created
           schema:
             $ref: "#/definitions/CreatedEntity"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         default:
-          description: Error
+          description: Internal server error
           schema:
             $ref: "#/definitions/Error"
   /v0/cards/{id}:
@@ -114,8 +119,10 @@ paths:
           description: The card with the specified ID was not found.
           schema:
             $ref: "#/definitions/Error"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         default:
-          description: generic Error response
+          description: Internal server error
           schema:
             $ref: "#/definitions/Error"
     post:
@@ -133,8 +140,14 @@ paths:
           description: The card has been updated
           schema:
             $ref: "#/definitions/Card"
+        404:
+          description: The card with the specified ID was not found.
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         default:
-          description: Error
+          description: Internal server error
           schema:
             $ref: "#/definitions/Error"
     delete:
@@ -143,10 +156,18 @@ paths:
         - card
       operationId: deleteCard
       responses:
-        204:
-          description: The card has been deleted
+        200:
+          description: The card with the specified ID has been deleted.
+          schema:
+            $ref: "#/definitions/DeletedEntity"
+        404:
+          description: The card with the specified ID was not found.
+          schema:
+            $ref: "#/definitions/Error"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         default:
-          description: Error
+          description: Internal server error
           schema:
             $ref: "#/definitions/Error"
 
@@ -163,8 +184,10 @@ paths:
             type: array
             items:
               $ref: "#/definitions/User"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         default:
-          description: generic Error response
+          description: Internal server error
           schema:
             $ref: "#/definitions/Error"
   /v0/users/{id}:
@@ -182,15 +205,17 @@ paths:
         200:
           description: Success
           schema:
-            $ref: '#/definitions/User'
+            $ref: "#/definitions/User"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         404:
-          description: The user not found.
+          description: The user with the specified ID was not found.
           schema:
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
-          description: Unexpected error.
+          description: Internal server error
           schema:
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     delete:
       tags:
         - user
@@ -198,15 +223,19 @@ paths:
       operationId: deleteUser
       responses:
         200:
-          description: Delete success
+          description: The user with the specified ID has been deleted
+          schema:
+            $ref: "#/definitions/DeletedEntity"
+        401:
+          $ref: "#/responses/UnauthorizedError"
         404:
-          description: The user not found.
+          description: The user with the specified ID was not found.
           schema:
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
-          description: Unexpected error.
+          description: Internal server error
           schema:
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
     post:
       tags:
         - user
@@ -216,23 +245,63 @@ paths:
         - name: user
           in: body
           schema:
-            $ref: '#/definitions/User'
+            $ref: "#/definitions/User"
       responses:
         200:
           description: Update success
           schema:
-            $ref: '#/definitions/User'
+            $ref: "#/definitions/User"
         404:
-          description: The user not found.
+          description: The user with the specified ID was not found.
           schema:
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
         default:
-          description: Unexpected error.
+          description: Internal server error
           schema:
-            $ref: '#/definitions/Error'
+            $ref: "#/definitions/Error"
+
+responses:
+  UnauthorizedError:
+    description: Authentication information is missing or invalid
+    headers:
+      WWW_Authenticate:
+        type: string
 
 definitions:
+  RegistrationForm:
+    type: object
+    required:
+      - email
+      - username
+      - password
+    properties:
+      email:
+        type: string
+        format: email
+      username:
+        type: string
+      password:
+        type: string
+        format: password
+  LoginForm:
+    type: object
+    required:
+      - username
+      - password
+    properties:
+      username:
+        type: string
+      password:
+        type: string
+        format: password
   CreatedEntity:
+    type: object
+    required:
+      - id
+    properties:
+      id:
+        type: string
+  DeletedEntity:
     type: object
     required:
       - id
@@ -264,32 +333,36 @@ definitions:
         type: number
       effects:
         type: object
-
   User:
     type: object
     properties:
-      userID:
+      id:
         type: string
         description: The ID of the User.
-      userName:
+      username:
         type: string
         description: The user name.
-      firstName:
-        type: string
-        description: First name of the User.
-      lastName:
-        type: string
-        description: Last name of the User.
       email:
         type: string
+        format: email
         description: The email of the User.
-      winGames:
+      password:
+        type: string
+        format: password
+        description: The password of the User.
+      win_games:
         type: integer
         description: Count of all games where the User has won.
-      totalGames:
+      total_games:
         type: integer
         description: Count of all games of the User.
-
+  UserToken:
+    type: object
+    properties:
+      user:
+        $ref: "#/definitions/User"
+      token:
+        type: string
   Error:
     type: object
     required:
@@ -300,13 +373,5 @@ definitions:
         format: int64
       message:
         type: string
-
   Principal:
     type: string
-  UserToken:
-    type: object
-    properties:
-      user:
-        $ref: '#/definitions/User'
-      token:
-        type: string
